add: homework scheduler
